--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ font-family: 'Parisienne', cursive; */
   top: 50%;
   transform: translateY(-50%);
 }
+
 /* Above Home component design */
 
 
@@ -54,7 +55,7 @@ font-family: 'Parisienne', cursive; */
 
 .login-bar:hover{
   border: 1px solid rgb(8, 164, 255);
-  color: white;
+  color: white !important;
   background-color: rgb(8, 164, 255);
 }
 
