--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,12 @@ font-family: 'Parisienne', cursive; */
 }
 
 .links{
-    font-size:1.3rem
+    font-size:1.3rem;
 }
 
 .nav-container img{
     width: 10% !important;
+    height: 4%;
 }
 /* Above Navber component design */
 
