--- a/src/index.css
+++ b/src/index.css
@@ -245,7 +245,7 @@ font-family: 'Pacifico', cursive;
 @media screen and (max-width:1350px){
   .carousel-caption {
     top: 25%;
-    transform: translateY(-50%);
+    transform: translateY(-40%);
   }
 }
 
@@ -284,6 +284,10 @@ font-family: 'Pacifico', cursive;
 
     .common-paragraph-text{
       font-size: 1rem;
+    }
+    .carousel-caption {
+      top: 25%;
+      transform: translateY(-20%);
     }
 }
 
